k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP  # Para produção, mude para LoadBalancer se necessário
